# pfe-dataparsing

./: .gitignore  AGENT.md  LICENCE  README.md  baselines.py  eval.py  pyproject.toml  run_eval.py  standardize.py  test.py  test_ts_mapping.py
notebooks/: experiments.ipynb  module.py
results_local/: evaluation_results_local.csv
results_local/mnli/: llm_standardized.csv  unitxt_standardized.csv
results_local/mrpc/: llm_standardized.csv  unitxt_standardized.csv
results_local/qnli/: llm_standardized.csv  unitxt_standardized.csv
results_local/sst2/: llm_standardized.csv  unitxt_standardized.csv
results_local/wnli/: llm_standardized.csv  unitxt_standardized.csv
src/: baselines.py  eval.py  standardize_api.py  standardize_local.py  utils.py
src/dataset_preprocessing_agent/: __init__.py  baselines.py  eval.py  eval_ts.py  standardize_api.py  standardize_local.py  utils.py
test_file/: run_eval.py
