[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataset-preprocessing-agent"
version = "0.1.0"
description = "LLM-based automated dataset standardization and evaluation framework"
readme = "README.md"
license = { file = "LICENCE" }
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0",
    "unitxt",
    "transformers",
    "torch",
    "accelerate",
    "sentence-transformers",
    "openai",
    "pandas",
    "tasksource",
]

[project.optional-dependencies]
notebook = [
    "seaborn",
    "matplotlib",
    "ipywidgets",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["dataset_preprocessing_agent*"]
exclude = ["notebooks*", "results*", "tests*"]

[tool.pyright]
pythonVersion = "3.10"
extraPaths = ["src"]
